--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: CompPhys Wiki
+title: The Book of PsiMulations
 description: This is a temporary website for the computational physics wiki project. 
